--- a/securedrop/journalist_templates/col.html
+++ b/securedrop/journalist_templates/col.html
@@ -3,7 +3,7 @@
 <div id="content" class="journalist-view-single">
 
   <form action='/regenerate-code' method='post' id="regenerate-code">
-    <input name="csrf_token" type="hidden" value="{{ csrf_token() }}"/>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
     <input type="hidden" name="sid" value="{{ sid }}">
 
     <p class="breadcrumbs">
@@ -22,7 +22,7 @@
     <p>The documents are stored encrypted for security. To read them, you will need to decrypt them using GPG.</p>
     <p>
       <form id="add_remove_source_tags" method="post">
-        <input name="csrf_token" type="hidden" value="{{ csrf_token() }}"/>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
         {% if source_labels %}
         Current source label(s): {% for label in source_labels %}
         <button type="submit" name="action" formaction="/col/remove_source_label/{{ sid }}/{{ label.SourceLabelType.id }}" class="tag-label">{{ label.SourceLabelType.label_text }} <i class="fa fa-times"></i></button>
@@ -35,6 +35,7 @@
         <button type="submit" name="action" formaction="/col/add_source_label/{{ sid }}/{{ label.id }}" class="untagged-tag-label">{{ label.label_text }} <i class="fa fa-plus"></i></button>
       {% endfor %}
     </p>
+    </form>
     {% endif %}
     <form action="/bulk" method="post">
       <div class="document-actions">
@@ -52,6 +53,8 @@
               <span class="file"><a class="btn small" href="/col/{{ sid }}/{{ doc.filename }}"><i class="fa fa-download"></i> <span class="filename">{{ doc.filename }}</span></a></span>
               <span class="info"><span title="{{ doc.size }} bytes">{{ doc.size|filesizeformat(binary=True) }}</span></span>
             {% endif %}
+            <input name="csrf_token" type="hidden" value="{{ csrf_token() }}"/>
+            <input type="hidden" name="sid" value="{{ sid }}"/>
             {% for label in unselected_submission_labels[doc.filename] %}
               <button type="submit" name="action"  formaction="/col/add_submission_label/{{ sid }}/{{ doc.filename }}/{{ label.id }}" class="untagged-tag-label">{{ label.label_text }} <i class="fa fa-plus"></i></button>
             {% endfor %}
